fixed button-row alignment

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ sup {
 }
 .button-row {
     display: inline-block;
-    margin-left: 1.6vw;
+    margin-left: 1.35vw;
     border-top: 1px solid transparent;
 }
 .output-wrapper {
